Fixed bug with overflow on the right. Need to add Vision section and do final touches. Adding navigation bar last.

--- a/styles/main.css
+++ b/styles/main.css
@@ -18,10 +18,11 @@ TABLE OF CONTENTS:
 
 /* 1. START BASIC PAGE LAYOUT*/
 
+
 body {
-    height: 100%;
-    overflow: auto;
-    background-color: #333333;
+  height: 100%;
+  overflow: auto;
+  background-color: #333333;
 }
 
 .container-fluid{
@@ -32,6 +33,10 @@ overflow: hidden;
 
 .noPad{
   padding: 0 !important;
+}
+
+.fa-2x {
+  vertical-align:bottom;
 }
 
 /* 1. END BASIC PAGE PROPERTIES */
@@ -100,8 +105,9 @@ overflow: hidden;
   background-size:cover;
   background-position: top center;
   min-height: 700px;
-  width: 100%;
+  width: 102.25%;
   height: 100%;
+
 }
 
 
@@ -138,8 +144,6 @@ overflow: hidden;
 .table{
   margin-left:20%;
   margin-top:30%;
-  height: 100%;
-  width: 100%;
   position: relative;
   display: block;
 }
@@ -184,15 +188,16 @@ overflow: hidden;
   background-color: #404040;
 }
 
-.skillHeaderText{
-  display: inline-block;
-  font-family: "Roboto Slab";
-  }
 
 .icon{
   text-align: center;
-  vertical-align: bottom;
 }
+
+.skillHeaderText{
+  display: inline-block;
+  font-family: "Roboto Slab";
+  vertical-align:baseline;
+  }
 
 .lighterColor{
    color:#d9d9d9;
@@ -235,7 +240,7 @@ overflow: hidden;
   width:300px;
   opacity:0.3;
   display:block;
-  margin: 1% auto;
+  margin: 3% auto;
 }
 
 /* 5. END PORTFOLIO
@@ -284,5 +289,6 @@ overflow: hidden;
 .copyrightText{
   color:#595959;
   text-align: center;
+  margin-bottom:1em;
 }
 /* 6. END FOOTER */
